# minimal_gazebo

./: README.md
minimal/: CMakeLists.txt  package.xml
minimal/launch/: minimal.launch
minimal/meshes/: wheel.dae
minimal/rviz/: minimal.rviz
minimal/urdf/: axle.urdf.xacro  minimal.xacro
minimal_control/: CMakeLists.txt  package.xml
minimal_control/config/: control.yaml
minimal_control/launch/: minimal_control.launch
minimal_gazebo/: CMakeLists.txt  package.xml
minimal_gazebo/launch/: minimal_world.launch
minimal_gazebo/src/: simple_world_plugin.cpp
minimal_gazebo/world/: minimal.world
